# glabels-qt

./: .gitignore  CMakeLists.txt
backends/barcode/: CMakeLists.txt
backends/merge/: CMakeLists.txt
glabels/: CMakeLists.txt  ColorPaletteItem.cpp  ColorPaletteItem.h  LabelEditor.cpp  main.cpp
glabels-batch/: main.cpp
glbarcode/: CMakeLists.txt
model/: CMakeLists.txt  ModelBarcodeObject.cpp  ModelImageObject.cpp  ParserState.cpp  Settings.cpp  XmlTemplateParser.cpp  XmlUtil.cpp
translations/: CMakeLists.txt  XmlStrings.cpp
